--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC.Models.HomeViewModel
 @{
-ViewBag.Title = "Home Page";
-ViewBag.Active = "#HomeBtn";
+    ViewBag.Title = "Home Page";
+    ViewBag.Active = "#HomeBtn";
 }
 <div class="container-fluid clip-background bg-white p-0 m-0">
     <div class="container">
@@ -14,15 +14,15 @@ ViewBag.Active = "#HomeBtn";
                         <a class="btn-pick-your-case text-decoration-none" href="/Product">CHỌN NGAY ỐP LƯNG</a>
                     </div>
                 </div>
-                
+
             </div>
             <div class="col-lg-6 order-first order-lg-last">
                 <div class="row align-items-center h-100">
                     <div class="col-auto flow-card">
                         <ul class="text-decoration-none group-text">
-                                <li><div class="circle-bullet"></div> <span>Bạn là người thích sự duy nhất</span></li>
-                                <li><div class="circle-bullet circle-bullet-2"></div> <span>Bạn muốn thiết kế chiếc ốp lưng<br />cho riêng mình?</span></li>
-                                <li><div class="circle-bullet"></div> <span>Hãy để chúng tôi giúp bạn. <a href="/Design">Click!</a></span></li>
+                            <li><div class="circle-bullet"></div> <span>Bạn là người thích sự duy nhất</span></li>
+                            <li><div class="circle-bullet circle-bullet-2"></div> <span>Bạn muốn thiết kế chiếc ốp lưng<br />cho riêng mình?</span></li>
+                            <li><div class="circle-bullet"></div> <span>Hãy để chúng tôi giúp bạn. <a href="/Design">Click!</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -64,7 +64,7 @@ ViewBag.Active = "#HomeBtn";
                 </a>
 
             </div>
-            
+
         </div>
     </div>
 </div>
@@ -81,22 +81,25 @@ ViewBag.Active = "#HomeBtn";
             <div class="col-12 overflow-hidden p-0 w-100 image-on-home">
                 <div id="carouselRecommend" class="carousel slide w-100 multi-item-carousel p-0 row m-0" data-ride="carousel">
                     <div class="carousel-inner " role="listbox">
-                        <div class="carousel-item active">
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
-                                <a href="/Product/Detail/@Model.ListBestSaler[0].ProductID">
-                                    <img src="@Url.Content("~/"+Model.ListBestSaler[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
-                                </a>    
-                            </div>
-                        </div>
-                        @for (int i = 1; i < Model.ListBestSaler.Count; i++)
+                        @if (Model.ListBestSaler.Any())
                         {
-                            <div class="carousel-item ">
+                            <div class="carousel-item active">
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
-                                    <a href="/Product/Detail/@Model.ListBestSaler[i].ProductID">
-                                        <img src="@Url.Content("~/"+Model.ListBestSaler[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                    <a href="/Product/Detail/@Model.ListBestSaler[0].ProductID">
+                                        <img src="@Url.Content("~/"+Model.ListBestSaler[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                     </a>
                                 </div>
                             </div>
+                            for (int i = 1; i < Model.ListBestSaler.Count; i++)
+                            {
+                                <div class="carousel-item ">
+                                    <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
+                                        <a href="/Product/Detail/@Model.ListBestSaler[i].ProductID">
+                                            <img src="@Url.Content("~/"+Model.ListBestSaler[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                        </a>
+                                    </div>
+                                </div>
+                            }
                         }
                     </div>
                     <a class="carousel-control-prev" href="#carouselRecommend" role="button" data-slide="prev">
@@ -123,22 +126,25 @@ ViewBag.Active = "#HomeBtn";
             <div class="col-12 overflow-hidden p-0 w-100 image-on-home">
                 <div id="carouselLasted" class="carousel slide w-100 multi-item-carousel p-0 row m-0" data-ride="carousel">
                     <div class="carousel-inner " role="listbox">
-                        <div class="carousel-item active">
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
-                                <a href="/Product/Detail/@Model.ListNew[0].ProductID">
-                                    <img src="@Url.Content("~/"+Model.ListNew[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
-                                </a>
-                            </div>
-                        </div>
-                        @for (int i = 1; i < Model.ListNew.Count; i++)
+                        @if (Model.ListNew.Any())
                         {
-                            <div class="carousel-item ">
+                            <div class="carousel-item active">
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
-                                    <a href="/Product/Detail/@Model.ListNew[i].ProductID">
-                                        <img src="@Url.Content("~/"+Model.ListNew[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                    <a href="/Product/Detail/@Model.ListNew[0].ProductID">
+                                        <img src="@Url.Content("~/"+Model.ListNew[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                     </a>
                                 </div>
                             </div>
+                            for (int i = 1; i < Model.ListNew.Count; i++)
+                            {
+                                <div class="carousel-item ">
+                                    <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
+                                        <a href="/Product/Detail/@Model.ListNew[i].ProductID">
+                                            <img src="@Url.Content("~/"+Model.ListNew[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                        </a>
+                                    </div>
+                                </div>
+                            }
                         }
                     </div>
                     <a class="carousel-control-prev" href="#carouselLasted" role="button" data-slide="prev">
@@ -157,7 +163,7 @@ ViewBag.Active = "#HomeBtn";
 <div class="container pt-5">
     <div class="row">
         <div class="col-12 col-sm-6 col-lg-3">
-            <img src="~/Resource/support.png" alt="Support" class="rounded-circle mx-auto d-block" width="100px" height="100px"/>
+            <img src="~/Resource/support.png" alt="Support" class="rounded-circle mx-auto d-block" width="100px" height="100px" />
             <h5 class="text-center my-3 text-info">CHĂM SÓC KHÁCH HÀNG</h5>
             <p class="text-justify">Luôn có nhân viên online thức trực 24/7 để hỗ trợ tận tình trước-trong-sau khi mua hàng. Đội ngũ chăm sóc khách hàng không ngừng nỗ lực để trở thành bạn đồng hành đáng tin cậy của khách hàng với tiêu chí phục vụ khách hàng là Thượng đế</p>
         </div>
@@ -186,7 +192,7 @@ ViewBag.Active = "#HomeBtn";
         $('.multi-item-carousel .carousel-item').each(function () {
             appendSlide(($(this)), ($(this)).next(), 5);
         });
-        function appendSlide(node,next, n) {
+        function appendSlide(node, next, n) {
             if (n == 0)
                 return;
             else {
