--- a/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -160,7 +160,7 @@
         <footer>
             <div class="py-0">
 
-                <p class="text-center font-weight-bold text-white">&copy; @DateTime.Now.Year - Web Programming - Ho Chi Minh City University of Technology and Education</p>
+                <p class="text-center font-weight-bold text-white">&copy; @DateTime.Now.Year - Ecommerce - Ho Chi Minh City University of Technology and Education</p>
 
             </div>
         </footer>
