--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
                             <div class="carousel-item active">
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                     <a href="/Product/Detail/@Model.ListBestSaler[0].ProductID">
-                                        <img src="@Url.Content("~/"+Model.ListBestSaler[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                        <img src="@Model.ListBestSaler[0].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                     </a>
                                 </div>
                             </div>
@@ -95,7 +95,7 @@
                                 <div class="carousel-item ">
                                     <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                         <a href="/Product/Detail/@Model.ListBestSaler[i].ProductID">
-                                            <img src="@Url.Content("~/"+Model.ListBestSaler[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                            <img src="@Model.ListBestSaler[i].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                         </a>
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
                             <div class="carousel-item active">
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                     <a href="/Product/Detail/@Model.ListNew[0].ProductID">
-                                        <img src="@Url.Content("~/"+Model.ListNew[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                        <img src="@Model.ListNew[0].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                     </a>
                                 </div>
                             </div>
@@ -140,7 +140,7 @@
                                 <div class="carousel-item ">
                                     <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                         <a href="/Product/Detail/@Model.ListNew[i].ProductID">
-                                            <img src="@Url.Content("~/"+Model.ListNew[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                            <img src="@Model.ListNew[i].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                         </a>
                                     </div>
                                 </div>
