--- a/MVC/Views/Orders/Detail.cshtml
+++ b/MVC/Views/Orders/Detail.cshtml
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-auto mx-auto">
                             <a href="/Product/Detail/@product.ID">
-                                <img src="@Url.Content("~/"+product.Image)" alt="Alternate Text" width="80" height="130" />
+                                <img src="@product.Image" alt="Alternate Text" width="80" height="130" />
                             </a>
                         </div>
                     </div>
