--- a/MVC/Views/Cart/Index.cshtml
+++ b/MVC/Views/Cart/Index.cshtml
@@ -73,7 +73,7 @@ else
 
                                             <div class="col-8 h-100">
                                                 <a href="/Product/Detail/@item.Product.ID">
-                                                    <img src="@Product.Image" alt="Alternate Text" class="image-on-cart" />
+                                                    <img src="@item.Product.Image" alt="Alternate Text" class="image-on-cart" />
                                                 </a>
                                             </div>
                                         </div>
