--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -42,16 +42,16 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="~/Resource/banner1.jpg" class=" w-100 d-block" alt="SlideShow Pictures">
+                        <img src="~/Resource/banner1.jpg" class=" w-100 d-block vh-75" alt="SlideShow Pictures">
                     </div>
                     <div class="carousel-item">
-                        <img src="~/Resource/banner2.jpg" class="w-100 d-block" alt="SlideShow Pictures">
+                        <img src="~/Resource/banner2.jpg" class="w-100 d-block vh-75" alt="SlideShow Pictures">
                     </div>
                     <div class="carousel-item">
-                        <img src="~/Resource/banner3.jpg" class="d-block w-100" alt="SlideShow Pictures">
+                        <img src="~/Resource/banner3.jpg" class="d-block w-100 vh-75" alt="SlideShow Pictures">
                     </div>
                     <div class="carousel-item">
-                        <img src="~/Resource/banner4.jpg" class="d-block w-100" alt="SlideShow Pictures">
+                        <img src="~/Resource/banner4.jpg" class="d-block w-100 vh-75" alt="SlideShow Pictures">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
