--- a/MVC/Views/Product/Detail.cshtml
+++ b/MVC/Views/Product/Detail.cshtml
@@ -48,7 +48,7 @@
                     <p class="h2 text-info py-3">
                         @Model.MainProduct.Name
                     </p>
-                    <p>Thiết kế: <span class="text-success">@Model.MainProduct.Author</span></p>
+                    <p>Thương hiệu: <span class="text-success">@Model.MainProduct.Author</span></p>
                     <hr />
                     <h3>Thông tin kèm theo</h3>
                     <ul>
