--- a/frontend/src/app/components/home/landing-page/landing-page.component.html
+++ b/frontend/src/app/components/home/landing-page/landing-page.component.html
@@ -1,2 +1,6 @@
-agdas gsasadfj   v
-{{version}}
+<banner></banner>
+<slide-show-banner></slide-show-banner>
+<slide-show-product></slide-show-product>
+<slide-show-product></slide-show-product>
+<our-services></our-services>
+<footer></footer>
