[Done UI product, UI detail without rate and comment]

--- a/frontend/src/app/components/home/product-page/product-page.component.html
+++ b/frontend/src/app/components/home/product-page/product-page.component.html
@@ -1,1 +1,18 @@
 <img src="../../../../assets/image/banner3.jpg" alt="Image-KhuyenMai" width="100%" />
+<div class="row mx-0">
+  <div class="col-12 col-lg-4 col-xl-3 pb-3">
+    <side-bar [title]="'Danh mục'" [haveSearch]="true" [data]="data"></side-bar>
+  </div>
+  <div class="col-12 col-lg-8 col-xl-9">
+    <ng-container *ngIf="products.length">
+
+      <product-card [product]="product" *ngFor="let product of products">
+
+      </product-card>
+    </ng-container>
+    <ng-container *ngIf="!products.length">
+      No result
+    </ng-container>
+
+  </div>
+</div>
