--- a/frontend/src/styles/components/index.scss
+++ b/frontend/src/styles/components/index.scss
@@ -1,4 +1,7 @@
 @import './home/banner';
 @import './home/footer';
+@import './home/product-card';
+@import './home/rate';
+@import './home/sidebar';
 @import './home/slide-show-product';
 @import './home/top-menu';
