--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-    <top-menu></top-menu>
-    <router-outlet></router-outlet>
+  <top-menu></top-menu>
+  <router-outlet></router-outlet>
+  <footer></footer>
 </div>
