--- a/frontend/src/app/components/home/product-page/product-page.component.html
+++ b/frontend/src/app/components/home/product-page/product-page.component.html
@@ -4,15 +4,19 @@
     <side-bar [title]="'Danh mục'" [haveSearch]="true" [data]="data"></side-bar>
   </div>
   <div class="col-12 col-lg-8 col-xl-9">
-    <ng-container *ngIf="products.length">
+    <div class="row post-feed">
+      <div class="col-6 col-md-4 col-xl-3 py-3 post ">
+        <ng-container *ngIf="products.length">
 
-      <product-card [product]="product" *ngFor="let product of products">
+          <product-card [product]="product" *ngFor="let product of products">
 
-      </product-card>
-    </ng-container>
-    <ng-container *ngIf="!products.length">
-      No result
-    </ng-container>
+          </product-card>
+        </ng-container>
 
+        <ng-container *ngIf="!products.length">
+          No result
+        </ng-container>
+      </div>
+    </div>
   </div>
 </div>
