--- a/frontend/src/styles/components/index.scss
+++ b/frontend/src/styles/components/index.scss
@@ -1,4 +1,5 @@
 @import './home/banner';
+@import './home/comment';
 @import './home/footer';
 @import './home/product-card';
 @import './home/rate';
