--- a/frontend/src/app/components/home/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/home/product-detail/product-detail.component.html
@@ -1,280 +1,74 @@
 <div class="row mx-0 mt-5">
-    <div class="col-lg-3 col-6 mx-auto">
-        <img src="{{product.image}}" alt="Alternate Text" width="100% " />
-    </div>
-    <div class="col-lg-8 col-12 pt-3">
-        <div class="row">
-            <div class="col-lg-7 col-md-6 col-9 mx-auto">
-                <h3 class="text-success">Giới thiệu</h3>
-                <p class="h2 text-info py-3">
-                    {{product.name}}
-                </p>
-                <p>Thương hiệu: <span class="text-success">{{product.brand}}</span></p>
-                <hr />
-                <h3>Thông tin kèm theo</h3>
-                <div [innerHTML] = "product.detail">
+  <div class="col-lg-3 col-6 mx-auto">
+    <img src="{{product.image}}" alt="Alternate Text" width="100% " />
+  </div>
+  <div class="col-lg-8 col-12 pt-3">
+    <div class="row">
+      <div class="col-lg-7 col-md-6 col-9 mx-auto">
+        <h3 class="text-success">Giới thiệu</h3>
+        <p class="h2 text-info py-3">
+          {{product.name}}
+        </p>
+        <p>Thương hiệu: <span class="text-success">{{product.brand}}</span></p>
+        <hr />
+        <h3>Thông tin kèm theo</h3>
+        <div [innerHTML]="product.detail">
 
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 col-9 mx-auto">
-                <h5>Thông tin thanh toán</h5>
-                <hr />
-                <ng-container *ngIf="product.promotionPrice">
-                    <p>Giá gốc: <del>{{product.price}} <u>đ</u></del> </p>
-                    <p>Giá bán: <span class="h2 text-danger">{{product.promotionPrice}} <u>đ</u></span></p>
-                    <p>Tiết kiệm: {{product.savePersent}}</p>
-                </ng-container>
-                <ng-container *ngIf="!product.promotionPrice">
-                    <p>Giá bán: <span class="h2 text-danger">{{product.price}} <u>đ</u></span></p>
-                </ng-container>
-                <a href="#" class="btn btn-info text-black btn-buy">Mua ngay</a>
-            </div>
         </div>
+      </div>
+      <div class="col-lg-5 col-md-6 col-9 mx-auto">
+        <h5>Thông tin thanh toán</h5>
+        <hr />
+        <ng-container *ngIf="product.promotionPrice">
+          <p>Giá gốc: <del>{{product.price}} <u>đ</u></del> </p>
+          <p>Giá bán: <span class="h2 text-danger">{{product.promotionPrice}} <u>đ</u></span></p>
+          <p>Tiết kiệm: {{product.savePersent}}</p>
+        </ng-container>
+        <ng-container *ngIf="!product.promotionPrice">
+          <p>Giá bán: <span class="h2 text-danger">{{product.price}} <u>đ</u></span></p>
+        </ng-container>
+        <a href="#" class="btn btn-info text-black btn-buy">Mua ngay</a>
+      </div>
     </div>
+  </div>
 </div>
 <div class="row pt-5">
-    <div class="col-12 col-lg-8">
-        <rate></rate>
-        <!-- <div class="row">
-            <div class="col-auto">
-                <button class="btn btn-info mb-3" id="newComment" data-toggle="collapse" data-target="#create-new">New Comment</button>
-            </div>
-        </div>
-        <div class="row comment-create collapse " id="create-new">
-            <form action="/Product/Comment" method="post" class="w-100">
-                <input type="text" name="idProduct" value="@Model.MainProduct.ID" hidden />
-                <div class="col-12">
-                    <textarea style="width:100%" rows="4" name="content"></textarea>
-                </div>
-                <div class="row w-100">
-                    <div class="col-auto ml-auto p-0">
-                        <button href="#" id="btnComment" class="btn btn-secondary" type="submit">comment</button>
-                    </div>
-                </div>
+  <div class="col-12 col-lg-8">
+    <rate></rate>
+    <div class="row">
+      <div class="col-auto">
+        <button class="btn btn-info mb-3" (click)="showCreateComment = !showCreateComment">New
+          Comment</button>
+      </div>
+    </div>
+    <comment-input [show]="showCreateComment"></comment-input>
+    <div class="row comment-section text-justify">
+      <div class="col-12">
+        <ng-container *ngFor="let comment of comments">
+          <comment [comment]="comment"></comment>
+        </ng-container>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-4 " *ngIf="relatedProducts.length">
+    <div class="row">
+      <div class="col-auto mr-auto">
+        <h3>Liên quan</h3>
+      </div>
+      <div class="col-12 pb-1 border-bottom mb-1" *ngFor="let product of relatedProducts">
+        <ng-container >
+            <product-card [product] = "product" [row] = "true">
 
-            </form>
-        </div>
-        <div class="row comment-section text-justify">
-            <div class="col-12">
-                @foreach (var comment in Model.Comments)
-                {
-
-                    <div class="row comment" id="comment-@comment.Comment.ID">
-                        <div class="col-auto">
-                            <img src="@comment.Image" alt="Alternate Text" class="rounded-circle comment-image d-block" />
-                        </div>
-                        <div class="col pl-0 comment-body" >
-                            <div class="row">
-                                <div class="col-12 ">
-                                    <div class="row">
-                                        <div class="col-auto comment-name">
-                                            <span class="">@comment.Name
-                                                @if (comment.Manager)
-                                                {<span class="text-qtv">Quản trị viên</span>}
-                                            </span>
-
-                                        </div>
-                                        <div class="col-auto ml-auto">
-                                            @if (comment.Modify)
-                                            {
-                                                <a href="/Product/DeleteComment/?id=@comment.Comment.ID&&idProduct=@Model.MainProduct.ID" class="text-decoration-none text-dark">x</a>
-                                            }
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <div class="col-12 comment-text">
-                                    <p>@comment.Comment.Content</p>
-                                </div>
-                                <div class="col-12 comment-tools">
-                                    <ul class="p-0">
-                                        <li class="d-inline-block"><i class="fa fa-clock-o"></i> @comment.Comment.CreateDate.Value.ToShortTimeString() &emsp;</li>
-                                        <li class="d-inline-block"><i class="fa fa-calendar"></i> @comment.Comment.CreateDate.Value.Date.ToShortDateString() &emsp;</li>
-                                        <li class="d-inline-block"><a href="#create-new-@comment.Comment.ID" class="text-decoration-none text-info" data-parent-id="@comment.Comment.ID" data-toggle="collapse">reply</a> &emsp;</li>
-                                        @if (comment.Modify)
-                                        {
-                                            <li class="d-inline-block"><a href="#edit-@comment.Comment.ID" class="text-decoration-none text-info edit" data-toggle="collapse" data-id="@comment.Comment.ID">edit</a></li>
-                                        }
-                                    </ul>
-                                </div>
-                                <div class="col-12 comment-replies">
-                                    @foreach (var reply in comment.ReplyComment)
-                                    {
-                                        <div class="row comment" id="comment-@reply.Comment.ID">
-                                            <div class="col-auto">
-                                                <img src="@reply.Image" alt="Alternate Text" class="rounded-circle comment-image d-block" />
-                                            </div>
-                                            <div class="col pl-0 comment-body">
-                                                <div class="row">
-                                                    <div class="col-auto comment-name">
-                                                        <span class="">@reply.Name
-                                                            @if (reply.Manager)
-                                                            {<span class="text-qtv text-qtv-reply">Quản trị viên</span>}
-                                                        </span>
-
-                                                    </div>
-                                                    <div class="col-auto ml-auto">
-                                                        @if (reply.Modify)
-                                                        {
-                                                            <a href="/Product/DeleteComment/?id=@reply.Comment.ID&&idProduct=@Model.MainProduct.ID" class="text-decoration-none text-dark">x</a>
-                                                        }
-                                                    </div>
-                                                    <div class="col-12 comment-text">
-                                                        <p>@reply.Comment.Content</p>
-                                                    </div>
-                                                    <div class="col-12 comment-tools">
-                                                        <ul class="p-0">
-                                                            <li class="d-inline-block"><i class="fa fa-clock-o"></i> @reply.Comment.CreateDate.Value.ToShortTimeString() &emsp;</li>
-                                                            <li class="d-inline-block"><i class="fa fa-calendar"></i> @reply.Comment.CreateDate.Value.Date.ToShortDateString() &emsp;</li>
-                                                            <li class="d-inline-block"><a href="#create-new-@comment.Comment.ID" class="text-decoration-none text-info" data-parent-id="@comment.Comment.ID" data-toggle="collapse">reply</a> &emsp;</li>
-                                                            @if (reply.Modify)
-                                                            {
-                                                                <li class="d-inline-block"><a href="#edit-reply-@reply.Comment.ID" class="text-decoration-none text-info edit-reply" data-toggle="collapse" data-id="@reply.Comment.ID">edit</a></li>
-                                                            }
-
-                                                        </ul>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row comment-create collapse pb-2 " id="edit-reply-@reply.Comment.ID">
-                                            <form action="/Product/Edit" method="post" class="w-100">
-                                                <input type="text" name="idComment" value="@reply.Comment.ID" hidden />
-                                                <input type="text" name="idProduct" value="@Model.MainProduct.ID" hidden />
-                                                <div class="col-12">
-                                                    <textarea style="width:100%" rows="4" name="content"></textarea>
-                                                </div>
-                                                <div class="row w-100">
-                                                    <div class="col-auto ml-auto p-0">
-                                                        <button href="#" class="btn btn-secondary btn-edit" type="submit">update</button>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    }
-                                    <div class="row comment-create collapse" id="create-new-@comment.Comment.ID">
-                                        <form action="/Product/Reply" method="post" class="w-100">
-                                            <input type="text" name="idProduct" value="@Model.MainProduct.ID" hidden />
-                                            <input type="text" name="idParent" value="@comment.Comment.ID" hidden />
-                                            <div class="col-12">
-                                                <textarea style="width:100%" rows="4" name="content"></textarea>
-                                            </div>
-                                            <div class="row w-100">
-                                                <div class="col-auto ml-auto p-0">
-                                                    <button href="#" id="btnComment" class="btn btn-secondary btn-reply" type="submit">comment</button>
-                                                </div>
-                                            </div>
-                                        </form>
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row comment-create collapse pt-2" id="edit-@comment.Comment.ID">
-                        <form action="/Product/Edit" method="post" class="w-100">
-                            <input type="text" name="idComment" value="@comment.Comment.ID" hidden />
-                            <input type="text" name="idProduct" value="@Model.MainProduct.ID" hidden />
-                            <div class="col-12">
-                                <textarea style="width:100%" rows="4" name="content"></textarea>
-                            </div>
-                            <div class="row w-100">
-                                <div class="col-auto ml-auto p-0">
-                                    <button href="#" class="btn btn-secondary btn-edit" type="submit">update</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                }
-            </div>
-        </div> -->
+            </product-card>
+        </ng-container>
+        
+      </div>
 
     </div>
-    <!-- <div class="col-12 col-lg-4 ">
-        <div class="row">
-            <div class="col-auto mr-auto">
-                <h3>Liên quan</h3>
-            </div>
-            @for (int i = 0; i < 5 && i<Model.RelateProducts.Count; i++)
-            {
-                var item = Model.RelateProducts[i];
-                <div class="col-12 pb-1 border-bottom mb-1" >
+  </div>
 
-                    <div class="view view-eighth">
-
-                        <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark product">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="card border-0">
-                                        <img src="@item.ImageLink" alt="Alternate Text" class="image-on-home m-auto" />
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="card-body p-0">
-                                        <div class="row">
-                                            <div class="col-12 pt-2 product-name overflow-hidden">
-                                                <p>@item.ProductName</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12 pt-2 product-price">
-                                                @if (item.PromotionPrice != item.Price)
-                                                {
-                                                    <p>
-                                                        @item.PromotionPrice <u>đ</u>
-                                                    </p>
-                                                }
-                                                else
-                                                {
-                                                    <p>
-                                                        @item.Price <u>đ</u>
-                                                    </p>
-                                                }
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12 pt-2 product-discount">
-                                                @if (item.PromotionPrice != item.Price)
-                                                {
-                                                    <del>
-                                                        @item.Price <u>đ</u>
-                                                    </del>
-                                                }
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12 pt-2 product-rate">
-
-                                            </div>
-                                        </div>
-
-                                    </div>
-
-                                </div>
-                            </div>
-
-
-                        </a>
-                        <div class="mask">
-                            <div class="row h-custom-40 align-content-end">
-                                <div class="col-auto mx-auto">
-                                    <a href="#" onclick="AddToCart(@item.ProductID)" class="add">Add To Cart</a>
-                                </div>
-                            </div>
-                            <div class="row h-custom-15 align-content-center">
-                                <div class="col-auto mx-auto">
-                                    <a href="/Product/Detail/@item.ProductID" class="info">View More</a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            }
-
-        </div>
-    </div> -->
 </div>
+
+<slide-show-product>
+    
+</slide-show-product>
