--- a/frontend/src/styles/components/home/_comment.scss
+++ b/frontend/src/styles/components/home/_comment.scss
@@ -25,4 +25,12 @@ comment{
     .comment-tools ul li a{
         font-size:14px;
     }
+    .text-qtv{
+        font-size:12px;
+        background-color:#f7ea6f;
+        padding:5px;
+    }
+    .text-qtv-reply{
+        font-size:10px;
+    }
 }
