--- a/frontend/src/styles/components/index.scss
+++ b/frontend/src/styles/components/index.scss
@@ -6,3 +6,5 @@
 @import './home/sidebar';
 @import './home/slide-show-product';
 @import './home/top-menu';
+@import './shared//login-popup';
+@import './home/cart';
