--- a/frontend/src/app/components/home/product-card/product-card.component.html
+++ b/frontend/src/app/components/home/product-card/product-card.component.html
@@ -50,7 +50,7 @@
     <div class="mask">
       <div class="row h-custom-40 align-content-end">
         <div class="col-auto mx-auto">
-          <a href="#" class="add">Add To Cart</a>
+          <a (click) = "addToCart()" class="add">Add To Cart</a>
         </div>
       </div>
       <div class="row h-custom-12 align-content-center">
