--- a/frontend/src/app/components/home/slide-show-product/slide-show-product.component.html
+++ b/frontend/src/app/components/home/slide-show-product/slide-show-product.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row mx-auto my-auto py-3">
         <div class="col-12 overflow-hidden p-0 w-100 image-on-home">
-            <div id="carouselRecommend" class="carousel slide w-100 multi-item-carousel p-0 row m-0" data-ride="carousel">
+            <div id="{{'carouselRecommend' + id}}" class="carousel slide w-100 multi-item-carousel p-0 row m-0" data-ride="carousel">
                 <div class="carousel-inner " role="listbox">
                     <ng-container *ngFor="let product of products; let i = index">
                         <div class="carousel-item " [class.active] = "i==0">
@@ -25,33 +25,12 @@
                             
                         </div>
                     </ng-container>
-                    
-                    <!-- @if (Model.ListBestSaler.Any())
-                    {
-                        <div class="carousel-item active">
-                            <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
-                                <a href="/Product/Detail/@Model.ListBestSaler[0].ProductID">
-                                    <img src="@Model.ListBestSaler[0].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
-                                </a>
-                            </div>
-                        </div>
-                        for (int i = 1; i < Model.ListBestSaler.Count; i++)
-                        {
-                            <div class="carousel-item ">
-                                <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
-                                    <a href="/Product/Detail/@Model.ListBestSaler[i].ProductID">
-                                        <img src="@Model.ListBestSaler[i].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
-                                    </a>
-                                </div>
-                            </div>
-                        }
-                    } -->
                 </div>
-                <a class="carousel-control-prev" href="#carouselRecommend" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="{{'#carouselRecommend' + id}}" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselRecommend" role="button" data-slide="next">
+                <a class="carousel-control-next" href="{{'#carouselRecommend' + id}}" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
