--- a/frontend/src/app/components/home/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/home/top-menu/top-menu.component.html
@@ -33,9 +33,8 @@
         </li>
       </ng-container>
       <ng-container *ngIf="!authen">
-        <li class="nav-item" id="SignInBtn"><a data-toggle="modal" href="#modalSignIn" class="btn btn-success">Sign
-            in</a></li>
-        <li class="nav-item" id="SignUpBtn"><a data-toggle="modal" href="#modalSignUp" class="nav-link">Sign up</a></li>
+        <li class="nav-item"><a class="btn btn-success text-white" (click) = "showLogin()">Đăng nhập</a></li>
+        <li class="nav-item "><a class="nav-link cursor-pointer" (click)="showSignUp()">Đăng ký</a></li>
       </ng-container>
       <li class="nav-item" id="CartBtn">
         <a href="/Cart" class="nav-link">
