--- a/frontend/src/styles/_layout.scss
+++ b/frontend/src/styles/_layout.scss
@@ -1,3 +1,14 @@
 .vh-75{
     height: 75vh;
 }
+
+.modal {
+    background-color: rgba($color: #000000, $alpha: .4);
+}
+
+label{
+    font-size: .85rem;
+}
+.cursor-pointer{
+    cursor: pointer;
+}
