--- a/frontend/src/app/components/shareds/login/login-popup-component.html
+++ b/frontend/src/app/components/shareds/login/login-popup-component.html
@@ -21,12 +21,12 @@
           <input type="password" class="form-control" placeholder="Nhập mật khẩu">
         </div>
         <div class="col-12">
-          <span class="forget-password">Quên mật khẩu?</span>
+          <span class="forget-password" (click)="forgetPassword()">Quên mật khẩu?</span>
         </div>
       </div>
       <div class="row my-3">
         <div class="col-12">
-          Bạn chưa có tài khoản? <span class="sign-up-now">Đăng kí ngay!</span>
+          Bạn chưa có tài khoản? <span class="sign-up-now" (click) = "signUp()">Đăng kí ngay!</span>
         </div>
       </div>
     </div>
