--- a/frontend/src/app/components/home/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/home/top-menu/top-menu.component.html
@@ -6,11 +6,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto topbar">
-      <li class="nav-item active" id="HomeBtn"><a class="nav-link" href="">Trang chủ</a></li>
-      <li class="nav-item" id="ProductBtn"><a class="nav-link" href="/Product">Sản phẩm</a></li>
+      <li class="nav-item" [class.active] = "activePage === 'home'" id="HomeBtn"><a class="nav-link" href="">Trang chủ</a></li>
+      <li class="nav-item" [class.active] = "activePage === 'product'" id="ProductBtn"><a class="nav-link" href="/Product">Sản phẩm</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <ng-container *ngIf="authen">
+      <ng-container *ngIf="authen">   
         <li class="nav-item">
           <div class="dropdown">
             <a class="btn btn-success dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
