--- a/frontend/src/app/components/home/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/home/product-detail/product-detail.component.html
@@ -69,6 +69,6 @@
 
 </div>
 
-<slide-show-product>
+<slide-show-product [title] = "'Sản phẩm đã xem'" [canCheckout] = "false" [products] = "viewedProducts">
     
 </slide-show-product>
