--- a/frontend/src/styles/commons/_buttons.scss
+++ b/frontend/src/styles/commons/_buttons.scss
@@ -15,4 +15,10 @@
   &.btn-buy{
     font-size: 22px;
   }
+  &.btn-checkout{
+    font-size: 22px;
+    color: white;
+    background-color: #df3333;
+    padding: 10px 50px;
+  }
 }
