--- a/frontend/src/styles/components/home/_slide-show-product.scss
+++ b/frontend/src/styles/components/home/_slide-show-product.scss
@@ -39,4 +39,9 @@ slide-show-product {
   .multi-item-carousel .carousel-inner .carousel-item-left {
     transform: translateX(0);
   }
+
+  .image-on-home {
+    width: 150px;
+    height: 310px;
+  }
 }
