--- a/frontend/src/app/components/home/product-card/product-card.component.html
+++ b/frontend/src/app/components/home/product-card/product-card.component.html
@@ -50,12 +50,12 @@
     <div class="mask">
       <div class="row h-custom-40 align-content-end">
         <div class="col-auto mx-auto">
-          <a (click) = "addToCart()" class="add">Add To Cart</a>
+          <a (click) = "addToCart()" class="add cursor-pointer">Add To Cart</a>
         </div>
       </div>
       <div class="row h-custom-12 align-content-center">
         <div class="col-auto mx-auto">
-          <a href="/Product/{{product.id}}" class="info">View More</a>
+          <a href="/chi-tiet/{{product.id}}" class="info">View More</a>
         </div>
       </div>
 
