--- a/frontend/src/app/components/home/slide-show-product/slide-show-product.component.html
+++ b/frontend/src/app/components/home/slide-show-product/slide-show-product.component.html
@@ -1,8 +1,8 @@
 <div class="container container-recommend">
     <div class="row w-100 pr-0">
-        <a href="#" class="text-decoration-none"><h2 class="pl-4 pt-3 text-recommend">Thời trang đề cử</h2></a>
-        <div class="ml-auto col-auto align-self-end pr-0">
-            <a href="/Product?metaTitle=Best-Saler" class="text-decoration-none text-recommend float-right">Xem thử!</a>
+        <a href="#" class="text-decoration-none"><h2 class="pl-4 pt-3 text-recommend">{{title}}</h2></a>
+        <div class="ml-auto col-auto align-self-end pr-0" *ngIf="canCheckout">
+            <a href="{{checkoutLink}}" class="text-decoration-none text-recommend float-right">Xem thử!</a>
         </div>
     </div>
     <div class="row mx-auto my-auto py-3">
@@ -17,7 +17,7 @@
                                     [class.d-sm-block] = "j==2"
                                     [class.d-md-block] = "j==3"
                                     [class.d-xl-block] = "j==4 || j == 5">
-                                    <a href="/Product/Detail/{{item.id}}">
+                                    <a href="/chi-tiet/{{item.id}}">
                                         <img src="{{item.image}}" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                     </a>
                                 </div>
