--- a/frontend/src/app/components/home/slide-show-product/slide-show-product.component.html
+++ b/frontend/src/app/components/home/slide-show-product/slide-show-product.component.html
@@ -10,7 +10,7 @@
             <div id="{{'carouselRecommend' + id}}" class="carousel slide w-100 multi-item-carousel p-0 row m-0" data-ride="carousel">
                 <div class="carousel-inner " role="listbox">
                     <ng-container *ngFor="let product of products; let i = index">
-                        <div class="carousel-item " [class.active] = "i==0">
+                        <div class="carousel-item " [class.active] = "i==0" *ngIf="i == 0 || products.length > 6">
                             <ng-container *ngFor="let item of getSubItems(i, products); let j = index">
                                 <div class="col-6 col-sm-4 col-md-3 col-xl-2 d-none float-left"
                                     [class.d-block] = "j==0 || j == 1" 
