--- a/frontend/src/app/components/home/cart/cart.component.html
+++ b/frontend/src/app/components/home/cart/cart.component.html
@@ -71,7 +71,7 @@
                             <td colspan="6">
                                 <div class="row">
                                     <div class="col-auto ml-auto pr-4">
-                                        <a class="btn btn-primary btn-checkout">Đi đến đặt hàng <i class="fa fa-arrow-circle-right"></i></a>
+                                        <a class="btn btn-primary btn-checkout" href="/giao-hang">Đi đến đặt hàng <i class="fa fa-arrow-circle-right"></i></a>
                                     </div>
                                 </div>
                             </td>
