--- a/frontend/src/app/components/home/checkout/checkout.component.html
+++ b/frontend/src/app/components/home/checkout/checkout.component.html
@@ -85,7 +85,7 @@
     </div>
   </div>
   <div class="w-100">
-      <button class="btn btn-checkout">Đặt mua</button>
+      <button class="btn btn-checkout float-right">Đặt mua</button>
   </div>
 </div>
 
