--- a/frontend/src/app/components/home/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/home/product-detail/product-detail.component.html
@@ -27,27 +27,30 @@
         <ng-container *ngIf="!product.promotionPrice">
           <p>Giá bán: <span class="h2 text-danger">{{product.price | number}} <u>đ</u></span></p>
         </ng-container>
-        <a href="#" class="btn btn-info text-black btn-buy">Mua ngay</a>
+        <a  class="btn btn-info text-black btn-buy" (click)="addToCart()">Mua ngay</a>
       </div>
     </div>
   </div>
 </div>
 <div class="row pt-5">
   <div class="col-12 col-lg-8">
-    <rate [rate] = "rate" (callback) = "onRate($event)"></rate>
+    <rate [rate]="rate" (callback)="onRate($event)"></rate>
     <div class="row">
       <div class="col-auto">
         <button class="btn btn-info mb-3" (click)="showCreateComment = !showCreateComment">New
           Comment</button>
       </div>
     </div>
-    <comment-input [show]="showCreateComment"></comment-input>
+    <comment-input [show]="showCreateComment" (callback)="onComment($event)"></comment-input>
     <div class="row comment-section text-justify">
       <div class="col-12">
-        <ng-container *ngFor="let comment of comments">
-          <comment [comment]="comment"></comment>
+        <ng-container
+          *ngFor="let comment of comments | paginate : {itemsPerPage: pageSize, currentPage: pageNumber, totalItems: totalCount}">
+          <comment [comment]="comment" (callback)="onReply($event, comment.id)"></comment>
         </ng-container>
       </div>
+      <pagination-controls *ngIf="comments.length" (pageChange)="changePage($event)"></pagination-controls>
+
     </div>
   </div>
   <div class="col-12 col-lg-4 " *ngIf="relatedProducts.length">
@@ -56,12 +59,12 @@
         <h3>Liên quan</h3>
       </div>
       <div class="col-12 pb-1 border-bottom mb-1" *ngFor="let product of relatedProducts">
-        <ng-container >
-            <product-card [product] = "product" [row] = "true">
+        <ng-container>
+          <product-card [product]="product" [row]="true">
 
-            </product-card>
+          </product-card>
         </ng-container>
-        
+
       </div>
 
     </div>
@@ -69,6 +72,6 @@
 
 </div>
 
-<slide-show-product [title] = "'Sản phẩm đã xem'" [canCheckout] = "false" [products] = "viewedProducts">
-    
+<slide-show-product [title]="'Sản phẩm đã xem'" [canCheckout]="false" [products]="viewedProducts">
+
 </slide-show-product>
