add procedure create ordercart

--- a/backend/Nhom2.TMDT.WebApi/Templates/MailConfirmTemplate.html
+++ b/backend/Nhom2.TMDT.WebApi/Templates/MailConfirmTemplate.html
@@ -1,1 +1,9 @@
-﻿
+﻿<p>
+    Chào bạn @Name!<br />
+    Bạn đã đăng ký tài khoản trên doxin.com<br />
+    Xác nhận email và đăng ký nhận bản tin từ Shopee để biết được những ưu đãi độc quyền, cập nhật mới nhất và "mẹo" hấp dẫn ngay!
+</p>
+<br />
+<div style="height:25px;width:180px;background:#ff5722;font-size:14px;font-weight:bold;border-radius:4px;text-align:center;line-height:25px;margin:0 auto">
+    <a href="@Link" style="color:white" target="_blank">Đồng ý! </a>
+</div>
