--- a/frontend/src/app/components/home/checkout/checkout.component.html
+++ b/frontend/src/app/components/home/checkout/checkout.component.html
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="w-100">
-      <button class="btn btn-checkout float-right">Đặt mua</button>
+      <button class="btn btn-checkout float-right" (click)="createOrder()">Đặt mua</button>
     </div>
   </div>
 
