[Get shipment details]

--- a/frontend/src/app/components/home/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/home/top-menu/top-menu.component.html
@@ -22,7 +22,7 @@
             </a>
 
             <div class="dropdown-menu dropdown-menu-right offset-2" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" data-toggle="modal" (click) = "showLogin()">Chuyển tài khoản</a>
+              <a class="dropdown-item cursor-pointer" data-toggle="modal" (click) = "showLogin()">Chuyển tài khoản</a>
               <a class="dropdown-item" href="/xem-don-hang">Đơn hàng</a>
               <a class="dropdown-item" href="/thong-tin-ca-nhan">Thông tin cá nhân<span class="float-right"><i
                     class="far fa-user"></i></span></a>
