--- a/backend/Nhom2.TMDT.WebApi/Templates/MailOrderInformationTemplate.html
+++ b/backend/Nhom2.TMDT.WebApi/Templates/MailOrderInformationTemplate.html
@@ -1,5 +1,5 @@
 ﻿<p>
     Chào bạn @Name!<br />
-    Đơn hàng trên doxin.com của bạn @Status vào lúc @DateTime<br />
+    Đơn hàng trên doxin.com của bạn đã @Status vào lúc @Time<br />
     Admin doxin.com thân gửi.
 </p>
