--- a/frontend/src/app/components/home/product-page/product-page.component.html
+++ b/frontend/src/app/components/home/product-page/product-page.component.html
@@ -1,7 +1,8 @@
 <img src="../../../../assets/image/banner3.jpg" alt="Image-KhuyenMai" width="100%" />
 <div class="row mx-0">
   <div class="col-12 col-lg-4 col-xl-3 pb-3">
-    <side-bar [title]="'Danh mục'" [haveSearch]="true" [data]="data"></side-bar>
+    <side-bar [title]="'Danh mục'" [haveSearch]="true" [data]="data" [keyActive] = "activeKey"
+    (callback) = "onCategoryChange($event)" (search) = "onSearch($event)"></side-bar>
   </div>
   <div class="col-12 col-lg-8 col-xl-9">
     <div class="row post-feed">
